Revert "Merge branch 'main' into backport-40656-to-main"
This reverts commit b277f30be9fa67a194807cc5e74ed9c9a090fb6f, reversing
changes made to 68c2af86e4b808b088b153e1151f820fa0b2087a.